fix missing active links css in collapse menu

--- a/app/assets/stylesheets/_nav.scss
+++ b/app/assets/stylesheets/_nav.scss
@@ -107,7 +107,7 @@
 				&:hover,
 				&:focus,
 				&:active {
-					color: $border;
+					color: $light;
 					outline: none;
 					background-color: transparent;
 				}
@@ -135,7 +135,7 @@
 		padding: 20px 0;
 		border-bottom: 1px solid;
 		border-color: $border;
-		background-color: $dark;
+		background-color: $light;
 
 		#Haathi {
 			a { color: $dark;
@@ -148,11 +148,19 @@
 		li {
 				a {
 					color: $dark;
+					&:after {
+						background: $primary;
+					}
+					&:hover,
+					&:focus,
+					&:active {
+						color: $dark;
+					}
 				}
 
 			}
 		.nav {
-		
+
 		}
 	}
 	
